# zephyr-boards

./: README.md  west.yml
.github/workflows/: build.yml  openhands-resolver.yml
boards/gd/gd32e230_eval/: Kconfig.board  Kconfig.gd32e230_eval  board.cmake  board.yml  gd32e230_eval.dts  gd32e230_eval.yaml  gd32e230_eval_defconfig
dts/arm/gd/gd32e23x/: gd32e230.dtsi
hal/gd/GD32E23x_Firmware_Library/CMSIS/GD/GD32E23x/Source/: system_gd32e23x.c
hal/gd/GD32E23x_Firmware_Library/CMSIS/GD/GD32E23x/Source/IAR/: startup_gd32e23x.s
hal/gd/GD32E23x_Firmware_Library/GD32E23x_standard_peripheral/Include/: gd32e23x_gpio.h
hal/gd/GD32E23x_Firmware_Library/GD32E23x_standard_peripheral/Source/: gd32e23x_adc.c  gd32e23x_timer.c  gd32e23x_usart.c
hal/gd/GD32E23x_Firmware_Library/Template/: gd32e23x_it.c  main.c
hal/gd/GD32E23x_Firmware_Library/Template/Keil_project/: Project.uvoptx  Project.uvprojx
hal/gd/common_include/: gd32_exti.h  gd32_gpio.h
samples/app/src/: main.c
soc/gd/gd32/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.soc  soc.yml
soc/gd/gd32/gd32e23x/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.defconfig.gd32e230  Kconfig.defconfig.series  Kconfig.soc  gd32_regs.h  linker.ld  soc.c  soc.h
zephyr/: module.yml
